# aws-lambda-rie-gateway

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml
src/: main.rs
