[package]
name = "aws-lambda-rie-gateway"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.0"
env_logger = "0.8"
futures = "0.3"
hyper = { version = "0.14", features = ["http1", "server", "stream", "runtime"] }
listenfd = "0.3"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
url = "2.2"
