[package]
name = "aws-lambda-rie-gateway"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws_lambda_events = { version = "0.6", features = ["apigw"] }
base64 = "0.13"
bytes = "1"
chrono = "0.4"
clap = { version = "3", features = ["derive", "env"] }
futures = "0.3"
hyper = { version = "0.14", features = ["http1", "server", "stream", "runtime"] }
listenfd = "1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
